--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -77,3 +77,48 @@ form.payment input[type="submit"] {
 .field_with_errors label {
   color: var(--form-element-invalid-border-color);
 }
+
+.floating-form {
+  position: fixed;
+  right: 0;
+  bottom: 1rem;
+  left: 0;
+  z-index: 10;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  margin: 0 auto;
+  box-shadow: var(--dropdown-box-shadow);
+  border-radius: var(--border-radius);
+  background: var(--transparent-bg);
+  padding: 2rem;
+  width: 80%;
+}
+
+.floating-form form {
+  display: flex;
+  align-items: center;
+  margin: 0;
+}
+
+.floating-form form .select {
+  margin: 0;
+  padding: 0;
+}
+
+.floating-form form .btn {
+  margin-left: 1.2rem;
+  height: 2.6rem;
+}
+
+.floating-form form .ss-values {
+  margin: auto 0px auto 1rem;
+  height: 2.6rem;
+}
+
+.ss-main {
+  transition: box-shadow 0.2s ease-in-out;
+}
+
+.ss-main:focus.has-error {
+  box-shadow: 0 0 10px var(--ss-error-color) !important;
+}
