--- a/app/views/warehouses/_purchased_products.html.slim
+++ b/app/views/warehouses/_purchased_products.html.slim
@@ -1,5 +1,5 @@
 .table-cards-group
-  .table-card
+  .table-card data-controller="move-items"
     .table-hgroup.flex.justify-between
       h3 Purchased Products
       h3 = @total_purchased_products
@@ -9,15 +9,25 @@
       = paginate @purchased_products
 
     - if @purchased_products.present?
+      .floating-form.hidden
+        = form_with url: move_purchased_products_path(warehouse_id: @warehouse.id), method: :post, data: { move_items_target: "form" } do |form|
+          = form.collection_select :destination_id, Warehouse.all, :id, :name, { prompt: "Select a warehouse" }, { class: "select", data: { controller: "slim-select", move_items_target: "destination" } }
+          a.btn.is-primary href="#" data-action="click->move-items#move"
+            i.icn 🚚
+            |  Move 
+            span data-move-items-target="count"
+
       table role="grid" data-controller="table"
         thead
+          th
+            span.semi-link data-action="click->move-items#toggleAll" data-move-items-target="toggleAllLink" Select
           th Photo
           th Title
           th Length × Width × Height, cm
           th.right Kg
           th.right Price
           th.right Shipping
-          th Actions
+          th.right Actions
         tbody
           - @purchased_products.each do |purchased|
             tr(
@@ -25,6 +35,8 @@
               data-action="click->table#goTo"
               data-table-url-param=purchased_product_path(purchased)
             )
+              td.no-events
+                = check_box_tag "product_ids[]", purchased.id, false, data: { 'move-items-target': 'checkbox', action: 'change->move-items#updateSelection' }, class: "mx-auto"
               td.text-center
                 = render "_shared/preloadable_img", src: thumb_url(purchased), class_names: "zoomable", width: 100
               td = purchased.purchase.product.full_title
