Add custom back_to link to purchased products

--- a/app/views/purchased_products/new.html.slim
+++ b/app/views/purchased_products/new.html.slim
@@ -1,4 +1,4 @@
-= render "_shared/nav-new", model: @purchased_product
+= render "_shared/nav-new", model: @purchased_product, custom_link: link_to("Back to warehouse", warehouse_path(@warehouse))
 
 main
   = render "form", purchased_product: @purchased_product, warehouse: @warehouse
