--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -14,9 +14,9 @@ main.wide
           th Customer and Products
           th Status
           th.right Price
-          th Date Created
-          th Updated ▾
-          th Woo ID
+          th Created  ▾
+          th Updated
+          th Woo ID
           th.right Actions
       tbody
         = render @sales
