--- a/app/views/_shared/_notice-err.html.slim
+++ b/app/views/_shared/_notice-err.html.slim
@@ -8,3 +8,10 @@
       - model.errors.each do |error|
         li
           = error.full_message
+
+- if flash[:error].present?
+  article.notice.is-error
+    .container
+      i.icn 🙀
+      p = sanitize(flash[:error])
+      i.icn 🙀
