Don't allow to change default warehouse if there is one already

--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -70,6 +70,7 @@ form.payment input[type="submit"] {
   background-color: red;
 }
 
+.field_with_errors select,
 .field_with_errors input {
   box-shadow: 2px 2px 8px var(--form-element-invalid-focus-color);
   border: 1px solid var(--form-element-invalid-border-color);
