--- a/app/views/_shared/_notice-err.html.slim
+++ b/app/views/_shared/_notice-err.html.slim
@@ -7,7 +7,9 @@
     ul
       - model.errors.each do |error|
         li
-          = error.full_message
+          strong = error.attribute.to_s.humanize
+          | : 
+          = error.message
 
 - if flash[:error].present?
   article.notice.is-error
