--- a/app/views/purchases/_form.html.slim
+++ b/app/views/purchases/_form.html.slim
@@ -28,7 +28,8 @@
       = payment_builder.label "What did you pay in total?"
       = payment_builder.number_field :value, step: :any
 
-    = form.label :warehouse, "Initial Warehouse"
-    = form.collection_select :warehouse_id, Warehouse.all.order(name: :asc), :id, :name, {selected: @default_warehouse_id}
+    - if Warehouse.any?
+      = form.label :warehouse, "Initial Warehouse"
+      = form.collection_select :warehouse_id, Warehouse.all.order(name: :asc), :id, :name, {selected: @default_warehouse_id}
 
   = form.submit
