Improve UX of the navigation

--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -12,6 +12,10 @@ body {
   padding-bottom: calc(var(--spacing) * 10);
 }
 
+main.main {
+  padding-block-start: var(--spacing);
+}
+
 button,
 input[type="submit"],
 input[type="button"],
