--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -1,21 +1,24 @@
 = render "_shared/notice"
 
 nav
-  ul.font-smaller
-    li = link_to "Purchases", purchases_path
-    li = link_to "Product", @purchase.product
-  ul.gap
+  ul
     li
-      a.btn href="#{url_for controller: "#{@purchase.model_name.plural}", action: "edit", id: @purchase}"
-        i.icn ✏️
-        | Edit
-
-- if @purchase.variation
-  hgroup
-    h1 = @purchase.product.full_title
-    h2 = @purchase.variation.type_name_and_value
-- else
-  h1 = @purchase.product.full_title
+      ul
+        li = link_to "Back to all purchases", purchases_path
+        li = link_to "Go to the product", @purchase.product
+      hgroup
+        h1 Purchase №#{@purchase.id}
+        h4 = @purchase.product.full_title
+        - if @purchase.variation
+        h4
+          | Supplier 
+          = @purchase.supplier.title
+          - if @purchase.variation
+            | , 
+            = @purchase.variation.type_name_and_value
+  ul
+    li
+      = render "_shared/action-edit", route: url_for(controller: "#{@purchase.model_name.plural}", action: "edit", id: @purchase), btn: true
 
 main.wide.flex.flex-col.gap.w-pd
   .cards
