--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -79,12 +79,12 @@ form.payment input[type="submit"] {
   color: var(--form-element-invalid-border-color);
 }
 
-.floating-form {
+.move_to_warehouse__form {
   position: fixed;
   right: 0;
   bottom: 1rem;
   left: 0;
-  z-index: 10;
+  z-index: 100;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   margin: 0 auto;
@@ -95,23 +95,23 @@ form.payment input[type="submit"] {
   width: 80%;
 }
 
-.floating-form form {
+.move_to_warehouse__form form {
   display: flex;
   align-items: center;
   margin: 0;
 }
 
-.floating-form form .select {
+.move_to_warehouse__form form .select {
   margin: 0;
   padding: 0;
 }
 
-.floating-form form .btn {
+.move_to_warehouse__form form .btn {
   margin-left: 1.2rem;
   height: 2.6rem;
 }
 
-.floating-form form .ss-values {
+.move_to_warehouse__form form .ss-values {
   margin: auto 0px auto 1rem;
   height: 2.6rem;
 }
