--- a/app/views/purchases/index.html.slim
+++ b/app/views/purchases/index.html.slim
@@ -8,19 +8,12 @@ main.wide data-controller="table move-items"
     = paginate @purchases
   
   - if @purchases.present?
-    .floating-form.hidden
-      = form_with url: move_purchases_path, method: :post, data: { move_items_target: "form" } do |form|
-        = form.collection_select :destination_id, Warehouse.all, :id, :name, { prompt: "Select a warehouse" }, { class: "select", data: { controller: "slim-select", move_items_target: "destination" } }
-        a.btn.is-primary href="#" data-action="click->move-items#move"
-          i.icn 🚚
-          |  Move 
-          span data-move-items-target="count"
+    = render "_shared/move_to_warehouse/form", form_url: move_purchases_path
 
     table(role="grid")
       thead
         tr
-          th
-            span.semi-link data-action="click->move-items#toggleAll" data-move-items-target="toggleAllLink" Select
+          = render "_shared/move_to_warehouse/th"
           th Image
           th Product
           th Supplier
