--- a/app/views/purchased_products/show.html.slim
+++ b/app/views/purchased_products/show.html.slim
@@ -4,7 +4,7 @@ nav
   ul
     li
       ul
-        li = link_to "Back to the Warehouse", @purchased_product.warehouse
+        li = link_to "Warehouse", @purchased_product.warehouse
         li = link_to "Purchase", @purchased_product.purchase
         li = link_to "Product", @purchased_product.purchase.product
       hgroup
