--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -4,7 +4,7 @@ nav
   ul
     li
       ul 
-        li = link_to "Back to all products", products_path
+        li = link_to "All products", products_path
       hgroup 
         h1 = @product.title
         h2 = @product.full_title
