Add purchased producs and purchases into the sale show view

--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -10,7 +10,7 @@ main.wide
     table role="grid" data-controller="table"
       thead
         tr
-          th Image
+          th.text-center Image
           th Customer and Products
           th Status
           th.right Price
