--- a/app/views/sales/show.html.slim
+++ b/app/views/sales/show.html.slim
@@ -1,12 +1,66 @@
 = render "_shared/notice"
 
-= render "_shared/nav-show", model: @sale
-  - if @sale.active? && @sale.has_unlinked_purchased_products? && @sale.products.any? { |product| product.purchased_products.any? }
+
+nav
+  ul
     li
-      a.btn href=link_purchased_products_sale_path
-        i.icn 🔗
-        | Link with Purchased Products
-main.wide.flex.flex-col.gap.w-pd
+      ul
+        li = link_to "All sales", sales_path
+      hgroup
+        h1 Sale №#{@sale.id}
+        h4 = @sale.title
+  ul
+    li
+      = render "_shared/action-edit", route: url_for(controller: "#{@sale.model_name.plural}", action: "edit", id: @sale), btn: true
+
+main.wide.flex.flex-col.gap.w-pd.no-bd
+  - if @sale.product_sales.present?
+    .table-card.full-width
+      .sales_show__order-list.flex.justify-between.items-center
+        h3 Order List
+        - if @sale.active? && @sale.has_unlinked_purchased_products? && @sale.products.any? { |product| product.purchased_products.any? }
+          a.btn href=link_purchased_products_sale_path
+            i.icn 🔗
+            | Link with purchases
+
+      table role="grid" data-controller="table"
+          thead
+            th.text-center Image
+            th Product
+            th Variation
+            th.right Price, $
+            th.right Quantity
+          tbody
+            - @sale.product_sales.each_with_index do |ps, idx|
+              tr.hoverable(
+                data-action="click->table#goTo"
+                data-table-url-param=product_path(ps.product)
+              )
+                td.text-center = render "_shared/preloadable_img", src: thumb_url(ps.product), class_names: "zoomable", width: 100
+                td
+                  = ps.product.full_title 
+                  ul.product-variations
+                    - ps.purchased_products.each do |purchased_product|
+                      li
+                        a.no-events href=purchased_product_path(purchased_product)
+                          i.icn 📦
+                          | #{purchased_product.warehouse.name}
+                          - if purchased_product.price
+                            | — costs: $
+                            .mono.inline = format_money purchased_product.price
+                        br
+                        a.no-events href=purchase_path(purchased_product.purchase)
+                          i.icn 💰
+                          |  #{purchased_product.purchase.supplier.title}
+                          | , #{format_date purchased_product.purchase.date}
+                          - if purchased_product.purchase.item_price
+                            | — costs: $
+                            .mono.inline = format_money purchased_product.purchase.item_price
+
+                td = ps.variation.present? ? ps.variation.title : "-"
+                td.right.mono = format_money ps.price
+                td.right = ps.qty
+
   .cards
     .card.grow
       .title Status
@@ -43,47 +97,6 @@ main.wide.flex.flex-col.gap.w-pd
         p = link_to @sale.woo_id, "https://store.handsomecake.com/wp-admin/post.php?post=#{@sale.woo_id}&action=edit"
       - else
         p = safe_blank_render @sale.woo_id
-
-  - if @sale.product_sales.present?
-    .table-card.full-width
-      h3 Sold Products
-      table role="grid" data-controller="table"
-          thead
-            th Title
-            th Variation?
-            th.right Price, $
-            th.right Quantity
-          tbody
-            - @sale.product_sales.each_with_index do |ps, idx|
-              tr.hoverable(
-                data-action="click->table#goTo"
-                data-table-url-param=product_path(ps.product)
-              )
-                td = ps.product.full_title 
-                td = ps.variation.present? ? ps.variation.title : "-"
-                td.right.mono = format_money ps.price
-                td.right = ps.qty
-
-  - if @sale.has_linked_purchased_products?
-    .table-card.full-width
-      h3 Purchased Products
-      table role="grid" data-controller="table"
-        thead
-          th Title
-          th Variation
-          th.right Price, $
-          th Warehouse
-        tbody
-          - @sale.product_sales.each do |ps|
-            - ps.purchased_products.each do |purchased_product|
-              tr.hoverable(
-                data-action="click->table#goTo"
-                data-table-url-param=purchased_product_path(purchased_product)
-              )
-                td = ps.product.full_title
-                td = ps.variation.present? ? ps.variation.title : "-"
-                td.right.mono = format_money purchased_product.price
-                td = purchased_product.warehouse.name
 
   .table-card.full-width
     h3 Address
