--- a/app/views/_shared/_nav-show.html.slim
+++ b/app/views/_shared/_nav-show.html.slim
@@ -5,7 +5,7 @@ nav
         li = link_to "All #{model.model_name.plural}", "#{url_for controller: "#{model.model_name.plural}", action: "index"}"
       hgroup
         h1 #{format_show_page_title(model)}
-        h4 #{model.model_name.name}
+        h4 #{model.model_name.name} №#{model.id}
   ul.gap
     li
       = render "_shared/action-edit", route: "#{url_for controller: "#{model.model_name.plural}", action: "edit", id: model}", btn: true
